Fix overlap in text for Japanese translation
The Scientific Domain tab in the home page has overlapping text for the Japanese version (and also for the English version on mobile). This prevents overlap but is not responsive on mobile.

--- a/assets/css/tabs.css
+++ b/assets/css/tabs.css
@@ -109,6 +109,7 @@ tr.highlight-th {
 td.bold-text {
     font-weight: bold;
     text-align: center;
+    min-width: 120px;
 }
 
 .scientific-domains td.bold-text {
